# Thinking-Like-a-Scientist

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
tables/: table_ablation_conditions.csv  table_ablation_conditions.tex  table_b2_cardinality_matched.csv  table_b2_cardinality_matched.tex  table_b3_residual_summary.csv  table_b3_residual_summary.tex  table_b5a_popularity_baseline.csv  table_b5a_popularity_baseline.tex  table_b5a_popularity_baseline_paper.csv  table_b5a_popularity_baseline_paper.tex  table_b5b_local_retrieval_baseline.csv  table_b5b_local_retrieval_baseline.tex  table_b5b_local_retrieval_baseline_paper.csv  table_b5b_local_retrieval_baseline_paper.tex  table_b6_effect_sizes.csv  table_b6_effect_sizes.tex  table_b7_content_sensitivity.tex  table_b7_inter_paper_jaccard.csv  table_b7_same_vs_shuffled.csv  table_cooccurrence_jsd_all12.csv  table_established_robustness.tex  table_family_matching.tex  table_inter_llm_agreement.tex  table_normalization_sensitivity.csv  table_normalization_sensitivity.tex  table_pipeline_ablation_model_metric.csv  table_pipeline_ablation_model_metric.tex  table_provider_level1.tex  table_validation_classification.csv  table_validation_classification.tex  table_validation_extraction.csv  table_validation_extraction.tex  table_validation_heuristic_calibration.csv  table_validation_heuristic_calibration.tex  table_validation_introducedness.csv  table_validation_introducedness.tex  table_validation_normalization.csv  table_validation_normalization.tex  table_validation_summary.csv  table_validation_summary.tex  (+2 more)
(+142 files in other folders)
