[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "llm-research-methods"
version = "1.0.0"
description = "Replication package for 'Thinking Like a Scientist? A Structural Study of LLM-Generated Research Methods'"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Francesca Carlon"},
    {name = "Brecht Verbeken"},
    {name = "Vincent Ginis"},
    {name = "Andres Algaba"},
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scipy>=1.11",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
figures = [
    "thefuzz>=0.20",
    "rapidfuzz>=3.0",
    "tqdm>=4.60",
]
pipeline = [
    "openai>=2.0",
    "google-generativeai>=0.8",
    "arxiv>=2.0",
    "PyMuPDF>=1.23",
    "requests>=2.28",
    "python-dotenv>=1.0",
    "anthropic>=0.45",
    "thefuzz>=0.20",
    "rapidfuzz>=3.0",
    "tqdm>=4.60",
]
